# contiamo-release-please

./: .gitignore  CHANGELOG.md  CI_SETUP.md  PROGRESS.md  README.md  Taskfile.yaml  action.yml  contiamo-release-please.yaml  pyproject.toml
.github/workflows/: contiamo-release-please.yml
docs/: AUTHENTICATION.md
src/contiamo_release_please/: __init__.py  analyser.py  azure.py  bootstrap.py  bumper.py  changelog.py  config.py  git.py  github.py  gitlab.py  main.py  release.py  shell_completion.py  version.py
src/contiamo_release_please/ci_templates/: __init__.py  azure.py  config.py  github.py  gitlab.py
tests/: __init__.py  test_analyser.py  test_bumper.py  test_changelog.py  test_config.py  test_gitlab.py  test_release.py
