[project]
name = "contiamo-release-please"
version = "0.2.0"
description = "Automated semantic versioning and release management tool"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "pyyaml>=6.0",
    "packaging>=24.0",
    "jsonpath-ng>=1.6.0",
    "tomlkit>=0.12.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/contiamo_release_please"]

[project.scripts]
contiamo-release-please = "contiamo_release_please.main:cli"

[tool.pyright]
exclude = ["**/node_modules", "**/__pycache__", "**/.venv"]
reportMissingImports = true
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.ruff]
# See https://beta.ruff.rs/docs/configuration/

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
extend-safe-fixes = ["F601"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.377",
    "ruff>=0.6.2",
    "pytest>=8.3.2",
]
